refactor catalog list
